--- a/frontend_1/manifest.json
+++ b/frontend_1/manifest.json
@@ -13,10 +13,7 @@
     "prefer_related_applications":false,
     "url":"https://www.medisi.one/",
     "categories":["health"],"description":"Приложение для медитаций",
-    "features": [
-     "Авторские медитации Инны Спициной",
-     "Память телефона не используются, работают на заблокированном экране, доступные цены по подписке от 179 рублей"
-    ],
+    "features": "Память телефона не используются, работают на заблокированном экране, доступные цены по подписке от 179 рублей",
     "icons":
     [{
         "src":"meta/android/android-launchericon-512-512.png","type":"image/png","sizes":"512x512","purpose": "any maskable"},
